--- a/test-output/SparkReport.html
+++ b/test-output/SparkReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 7, 2024 05:24:19 pm</span></a>
+<a href="#"><span class="badge badge-primary">Feb 14, 2024 02:24:41 pm</span></a>
 </li>
 </ul>
 </div>
@@ -71,13 +71,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 7, 2024 05:24:19 pm</h3>
+<h3>Feb 14, 2024 02:24:41 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 7, 2024 05:24:34 pm</h3>
+<h3>Feb 14, 2024 02:24:52 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -173,7 +173,7 @@ var timeline = {
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead>
 <tbody>
 <tr>
-<td>Windows10</td>
+<td>10.0</td>
 <td>2</td>
 <td>0</td>
 <td>0</td>
@@ -181,7 +181,7 @@ var timeline = {
 <td>100%</td>
 </tr>
 <tr>
-<td>10.0</td>
+<td>Windows10</td>
 <td>2</td>
 <td>0</td>
 <td>0</td>
@@ -250,7 +250,7 @@ infoEvents: 0
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tablet"></i></a>
 <ul id="device-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">Windows10</a><a class="dropdown-item" href="#">10.0</a>
+<a class="dropdown-item" href="#">10.0</a><a class="dropdown-item" href="#">Windows10</a>
 </ul>
 </li>
 </ul>
@@ -263,7 +263,7 @@ infoEvents: 0
           <div class="test-detail">
             <p class="name">Java Search Test</p>
             <p class="text-sm">
-              <span>5:24:23 pm</span> / <span>00:00:00:000</span>
+              <span>2:24:45 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -272,8 +272,8 @@ infoEvents: 0
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Java Search Test</h5>
-<span class='badge badge-success'>02.07.2024 5:24:23 pm</span>
-<span class='badge badge-danger'>02.07.2024 5:24:23 pm</span>
+<span class='badge badge-success'>02.14.2024 2:24:45 pm</span>
+<span class='badge badge-danger'>02.14.2024 2:24:45 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -294,7 +294,7 @@ infoEvents: 0
           <div class="test-detail">
             <p class="name">Selenium Search Test</p>
             <p class="text-sm">
-              <span>5:24:29 pm</span> / <span>00:00:00:000</span>
+              <span>2:24:48 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -303,8 +303,8 @@ infoEvents: 0
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Selenium Search Test</h5>
-<span class='badge badge-success'>02.07.2024 5:24:29 pm</span>
-<span class='badge badge-danger'>02.07.2024 5:24:29 pm</span>
+<span class='badge badge-success'>02.14.2024 2:24:48 pm</span>
+<span class='badge badge-danger'>02.14.2024 2:24:48 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -359,14 +359,14 @@ infoEvents: 0
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>17:24:23 pm</td>
+<td>14:24:45 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>Java Search Test</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>17:24:29 pm</td>
+<td>14:24:48 pm</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>Selenium Search Test</a>
 </td>
@@ -396,46 +396,6 @@ infoEvents: 0
 <span class="meta">
 <span class='badge log pass-bg'>2</span>
 </span>
-<p class="name">Windows10</p>
-<p class="duration text-sm">2 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>Windows10</h4>
-<span status="pass" class='badge log pass-bg'>2 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>17:24:23 pm</td>
-<td>
-<a href="#" class="linked" test-id='1' id='1'>Java Search Test</a>
-</td>
-</tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>17:24:29 pm</td>
-<td>
-<a href="#" class="linked" test-id='2' id='2'>Selenium Search Test</a>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>2</span>
-</span>
 <p class="name">10.0</p>
 <p class="duration text-sm">2 tests</p>
 </div>
@@ -455,14 +415,54 @@ infoEvents: 0
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>17:24:23 pm</td>
+<td>14:24:45 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>Java Search Test</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>17:24:29 pm</td>
+<td>14:24:48 pm</td>
+<td>
+<a href="#" class="linked" test-id='2' id='2'>Selenium Search Test</a>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>2</span>
+</span>
+<p class="name">Windows10</p>
+<p class="duration text-sm">2 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>Windows10</h4>
+<span status="pass" class='badge log pass-bg'>2 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>14:24:45 pm</td>
+<td>
+<a href="#" class="linked" test-id='1' id='1'>Java Search Test</a>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>14:24:48 pm</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>Selenium Search Test</a>
 </td>
